[MODIF] name of elixyr

--- a/elixir/index.html
+++ b/elixir/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elixyr - Solutions Web Innovantes</title>
+    <title>Elixyre</title>
     <meta name="description" content="Elixyr crée des sites web et applications sur mesure avec des designs innovants et des animations 3D exceptionnelles." />
   </head>
   <body>
